# cubemanipulator

./: CMakeLists.txt  README.md
cmake/: LinkASSIMP.cmake  LinkGLUT.cmake
include/: engine.hpp  model.hpp  shader.hpp  texture.hpp
resources/shaders/: normalmapping.fs  normalmapping.vs  texturemapping.fs  texturemapping.vs
source/: engine.cpp  main.cpp  model.cpp  shader.cpp  texture.cpp
